# kisekifs

./: .gitignore  .rules.md  .rust.instructions.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  artifacts.js  criterion.toml  deny.toml  index.html  justfile  licenserc.toml  oranda.json  rust-toolchain.toml  rustfmt.toml  typos.toml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  lint.yml  rust.yml  test.yml  web.yml
benches/: bench_main.rs
benches/benchmarks/: mod.rs  page.rs  pool.rs
benches/cache/: juice.rs  mod.rs
book/: 404.html  background.html  bench.html  book.js  design.html  index.html  print.html  quick_start.html  searchindex.js  searchindex.json
book/css/: general.css  variables.css
book/fonts/: fonts.css
components/binary/: Cargo.toml  build.rs
components/binary/src/: build_info.rs  main.rs
components/binary/src/cmd/: format.rs  mod.rs  mount.rs  unmount.rs
components/common/: Cargo.toml
components/common/src/: lib.rs
components/fuse/: Cargo.toml
components/fuse/src/: config.rs  err.rs  lib.rs  null.rs
components/kv/: Cargo.toml  justfile
components/kv/src/: err.rs  lib.rs  store.rs
components/kv/src/rocks/: mod.rs
components/meta/: Cargo.toml  justfile
components/meta/src/: config.rs  context.rs  engine.rs  err.rs  id_table.rs  lib.rs  metrics.rs  open_files.rs
components/meta/src/backend/: key.rs  mod.rs  rocksdb.rs  rocksdb_metrics.rs
components/meta/src/engine/: key.rs  mod.rs  rocksdb.rs
components/storage/: Cargo.toml
components/storage/benches/: bench_main.rs
components/storage/src/: buffer_pool.rs  cache.rs  err.rs  error.rs  lib.rs  pool.rs  raw_buffer.rs  slice_buffer.rs  write_buffer.rs  writer.rs
components/storage/src/cache/: README.md  disk_eviction.rs  file_cache.rs  juice_cache.rs  mem_cache.rs  page_cache.rs  partitioned_cache.rs
components/storage/src/pool/: disk_pool.rs  memory_pool.rs  mod.rs
components/types/: Cargo.toml
components/types/src/: attr.rs  entry.rs  ino.rs  internal_nodes.rs  lib.rs  setting.rs  slice.rs  stat.rs
components/utils/: Cargo.toml
components/utils/src/: align.rs  env.rs  lib.rs  logger.rs  object_storage.rs  panic_hook.rs  pyroscope_init.rs  readable_size.rs  runtime.rs  sentry_init.rs  tracing_utils.rs
components/vfs/: Cargo.toml
components/vfs/src/: config.rs  data_manager.rs  err.rs  handle.rs  kiseki.rs  lib.rs  reader.rs  writer.rs  writer_v1.rs  writer_v3.rs
components/vfs/src/kiseki/: file_io.rs  metadata.rs  namespace.rs  tests.rs
dev/: lima-k8s.yml  lima-ubuntu.yml
docker/: Dockerfile.ubuntu  Dockerfile.ubuntu.builder  entrypoint.sh
docs/: book.toml
docs/src/: SUMMARY.md  background.md  bench.md  design.md  flox.md  quick_start.md
fs/: Cargo.toml
fs/src/: err.rs  lib.rs  null.rs
hack/ubuntu/: prepare.sh
plans/: 001-green-ci-baseline.md  002-dependency-security.md  003-safe-volume-format.md  004-object-storage-config.md  005-fuse-boundary-hardening.md  006-crash-consistent-write-publication.md  007-safe-buffer-data-path.md  008-mounted-linux-acceptance.md  009-operational-mount-lifecycle.md  010-verified-metadata-backup-restore.md  README.md
script/ubuntu/: dep.sh
src/: build_info.rs  lib.rs  logging.rs  sync.rs
src/chunk/: config.rs  disk_cache.rs  engine.rs  err.rs  mod.rs  page.rs  slice.rs  slice2.rs
src/cmd/: format.rs  mod.rs  mount.rs  unmount.rs
src/common/: alloc.rs  err.rs  mod.rs  readable_size.rs  runtime.rs
src/fs/: config.rs  fs.rs  mod.rs  null.rs
src/fuse/: config.rs  fuse.rs  mod.rs  null.rs
src/meta/: config.rs  context.rs  engine.rs  engine_quota.rs  engine_sto.rs  err.rs  id_table.rs  kv_meta.rs  mod.rs  quota.rs  sto.rs  types.rs  util.rs
src/meta/types/: attr.rs  dir_stat.rs  entry.rs  fs_stat.rs  ino.rs  mod.rs  slice.rs
src/metrics/: data.rs  mod.rs  tracing_span.rs
src/storage/: cache.rs  mod.rs  writer.rs
src/vfs/: config.rs  err.rs  handle.rs  kiseki.rs  mod.rs  reader.rs  writer.rs
src/vfs/buffer/: mod.rs
src/vfs/storage/: buffer.rs  cache.rs  engine.rs  err.rs  mod.rs  reader.rs  reader_v2.rs  scheduler.rs  sto.rs  worker.rs  writer.rs
src/vfs/storage/cache/: file_cache.rs  juice_cache.rs  partitioned_cache.rs
src/vfs/storage/worker/: flush.rs  listener.rs  request.rs
tests/: Cargo.toml
tests/src/: lib.rs
