[workspace]
resolver = "2"
members = [
    "components/types",
    "components/storage",
    "components/utils",
    "tests",
    "components/vfs",
    "components/meta",
    "components/common",
    "components/fuse",
    "components/binary",
]
[workspace.dependencies]
snafu = "0.8.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tokio = { version = "1.35.1", features = ["full"]}
features = { version = "0.10.0"}
serde = "1.0.195"
serde_json = "1.0.111"
criterion = {  version = "0.5.1", features = ["async_tokio","async_futures"] }
lazy_static = "1.4.0"
opendal = { version = "0.45.0", features = ["services-sled"]}
futures = "0.3.30"
sonyflake = "0.2.0"
byteorder = "1.5.0"
bincode = "1.3.3"
rangemap = "1.4.0"
tempfile = "3.9.0"
bytes = "1.5.0"
tokio-util = { version = "0.7.10", features = ["rt", "io"] }
tokio-stream = "0.1.14"
async-trait = "0.1.77"
dashmap = "5.5.3"
crossbeam = "0.8.4"
crossbeam-queue = "0.3.11"
crossbeam-channel = "0.5.11"
fuser = { version = "0.14.0", features = ["libfuse","serializable"] }
libc = "0.2.152"
bitflags = "2.4.2"
scopeguard = "1.2.0"
rustix = "0.38.30"
rand = "0.8.5"

[package]
name = "kiseki"
version = "0.1.0"
edition = "2021"
authors = ["Ryan Tan"]
license = "Apache-2.0"
description = "A fuse filesystem"
exclude = ["benches"]
autobenches = false

[profile.release]
debug = true

[lib]
bench = false

[dependencies]

