[workspace]
resolver = "2"
members = [
    "components/types",
    "components/storage",
    "components/utils",
    "tests",
    "components/vfs",
    "components/meta",
    "components/common",
    "components/fuse",
    "components/binary",
]
[workspace.dependencies]
async-trait = "0.1.77"
bincode = "1.3.3"
bitflags = "2.4.2"
byteorder = "1.5.0"
bytes = "1.5.0"
criterion = { version = "0.5.1", features = ["async_tokio", "async_futures"] }
crossbeam = "0.8.4"
crossbeam-channel = "0.5.11"
crossbeam-queue = "0.3.11"
dashmap = "5.5.3"
features = { version = "0.10.0" }
fuser = { version = "0.14.0", features = ["libfuse", "serializable"] }
futures = "0.3.30"
lazy_static = "1.4.0"
libc = "0.2.152"
opendal = { version = "0.45.0", features = ["services-sled", "services-s3"] }
rand = "0.8.5"
rangemap = "1.4.0"
rustix = "0.38.30"
scopeguard = "1.2.0"
serde = "1.0.195"
serde_json = "1.0.111"
snafu = "0.8.0"
sonyflake = "0.2.0"
tempfile = "3.9.0"
tokio = { version = "1.35.1", features = ["full", "tracing"] }
tokio-stream = "0.1.14"
tokio-util = { version = "0.7.10", features = ["rt", "io"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[package]
name = "kiseki"
version = "0.1.0"
edition = "2021"
authors = ["Ryan Tan"]
license = "Apache-2.0"
description = "A fuse filesystem"
exclude = ["benches"]
autobenches = false

[profile.release]
debug = true
panic = 'abort'

[lib]
bench = false

[dependencies]
