[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Ryan Tan"]
license = "Apache-2.0"
description = "A fuse filesystem"
exclude = ["benches"]

[workspace]
resolver = "2"
members = [
    "components/types",
    "components/storage",
    "components/utils",
    "tests",
    "components/vfs",
    "components/meta",
    "components/common",
    "components/fuse",
    "components/binary",
]
[workspace.dependencies]
async-trait = "0.1.89"
bincode = "1.3.3"
bitflags = "2.9.4"
byteorder = "1.5.0"
bytes = "1.10.1"
criterion = { version = "0.5.1", features = ["async_tokio", "async_futures"] }
crossbeam = "0.8.4"
crossbeam-channel = "0.5.15"
crossbeam-queue = "0.3.12"
dashmap = "5.5.3"
features = { version = "0.10.0" }
fuser = { version = "0.15.1", features = ["libfuse", "serializable"] }
futures = "0.3.31"
lazy_static = "1.5.0"
libc = "0.2.175"
opendal = { version = "0.45.1", features = ["services-sled", "services-s3"] }
rand = "0.8.5"
rangemap = "1.6.0"
rustix = { version = "0.38.44", features = ["mount"] }
scopeguard = "1.2.0"
serde = "1.0.219"
serde_json = "1.0.143"
snafu = "0.8.9"
sonyflake = "0.2.0"
tempfile = "3.21.0"
tokio = { version = "1.47.1", features = ["full", "tracing"] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.16", features = ["rt", "io"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
opentelemetry = "0.29"
opentelemetry_api = "0.20"
opentelemetry_sdk = { version = "0.29", features = ["rt-tokio"] }
opentelemetry-prometheus = "0.29"
prometheus = "0.14"
opentelemetry-otlp = { version = "0.29", features = ["http-proto", "reqwest-client"] }
strum = "0.27"
strum_macros = "0.27"

[profile.release]
debug = true
panic = 'abort'
