[package]
name = "fs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "kisekifs"
path = "bin/kisekifs.rs"

[dependencies]

fuser = { workspace = true }
clap = { version = "4.4.16", features = ["derive"]}
snafu = { workspace = true }
tracing = {workspace = true }
tracing-subscriber = { workspace = true}