[package]
name = "kiseki-binary"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuser.workspace = true
rustix = { workspace = true, features = ["mount"] }
snafu.workspace = true
tokio.workspace = true
tracing.workspace = true

#kiseki-utils = {path = "../../components/utils", features = ["tokio-console"]}
kiseki-common = { path = "../../components/common" }
kiseki-fuse = { path = "../../components/fuse" }
kiseki-meta = { path = "../../components/meta", features = ["meta-rocksdb"] }
kiseki-storage = { path = "../../components/storage" }
kiseki-types = { path = "../../components/types" }
kiseki-utils = { path = "../../components/utils" }
kiseki-vfs = { path = "../../components/vfs" }

clap = { version = "4.5.47", features = ["derive"] }
clap-num = "1.2.0"
const_format = "0.2.34"
ctrlc = "3.4.7"
human-panic = "1.2.3"
regex = "1.11.2"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.16.0"

[build-dependencies]
built = { version = "0.7.7", features = ["git2"] }
const_format = "0.2.34"
