[package]
name = "kiseki-fuse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuser.workspace = true
libc.workspace = true
snafu.workspace = true
tokio.workspace = true
tracing.workspace = true

kiseki-common = { path = "../../components/common" }
kiseki-meta = { path = "../../components/meta" }
kiseki-storage = { path = "../../components/storage" }
kiseki-types = { path = "../../components/types" }
kiseki-utils = { path = "../../components/utils" }
kiseki-vfs = { path = "../../components/vfs" }
