[package]
name = "kiseki-meta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Public features
meta-tikv = ["dep:tikv-client"]
meta-rocksdb = ["dep:rocksdb"]


[dependencies]
tokio.workspace = true
futures.workspace =true
async-trait.workspace = true
opendal.workspace = true
bytes.workspace =true
snafu.workspace = true
sonyflake.workspace = true
dashmap.workspace = true
serde.workspace = true
bincode.workspace = true
byteorder.workspace = true

kiseki-utils = {path = "../../components/utils"}
kiseki-types = {path = "../../components/types"}
kiseki-common = {path = "../../components/common"}

rocksdb = { version = "0.22.0", features = ["lz4", "snappy"], optional = true }
tikv-client = {version ="0.3.0", optional = true}


[dev-dependencies]
tempfile.workspace = true
