[package]
name = "kiseki-meta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Public features
meta-tikv = ["dep:tikv-client"]
meta-rocksdb = ["dep:rocksdb"]


[dependencies]
tokio.workspace = true
futures.workspace =true
async-trait.workspace = true
opendal.workspace = true
snafu.workspace = true
sonyflake.workspace = true
dashmap.workspace = true
bytes.workspace =true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
byteorder.workspace = true
crossbeam.workspace = true
tracing.workspace = true
libc.workspace = true
scopeguard.workspace = true
lazy_static.workspace = true

kiseki-utils = {path = "../../components/utils"}
kiseki-types = {path = "../../components/types"}
kiseki-common = {path = "../../components/common"}

rocksdb = { version = "0.22.0", features = ["lz4", "snappy"], optional = true }
tikv-client = {version ="0.3.0", optional = true}
strum = "0.26"
strum_macros = "0.26"


[dev-dependencies]
tempfile.workspace = true
