[package]
name = "kiseki-meta"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Public features
meta-tikv = ["dep:tikv-client"]
meta-rocksdb = ["dep:rocksdb"]

[dependencies]
async-trait.workspace = true
bincode.workspace = true
bitflags.workspace = true
byteorder.workspace = true
bytes.workspace = true
crossbeam.workspace = true
dashmap.workspace = true
futures.workspace = true
lazy_static.workspace = true
libc.workspace = true
opendal.workspace = true
scopeguard.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
sonyflake.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
opentelemetry.workspace = true
opentelemetry_api.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-prometheus.workspace = true
prometheus.workspace = true
strum.workspace = true
strum_macros.workspace = true
bon.workspace = true

kiseki-common = { path = "../../components/common" }
kiseki-types = { path = "../../components/types" }
kiseki-utils = { path = "../../components/utils" }

log = "0.4.27"
rocksdb = { version = "0.22.0", features = ["lz4", "snappy"], optional = true }
tikv-client = { version = "0.3.0", optional = true }

[dev-dependencies]
tempfile.workspace = true
rstest.workspace = true
proptest.workspace = true
tokio-test.workspace = true
serial_test.workspace = true
