[package]
name = "kiseki-storage"
version = "0.1.0"
edition = "2021"
description = "The core storage implementation"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
tokio.workspace = true
tracing.workspace = true
lazy_static.workspace = true
snafu.workspace = true
opendal.workspace =true
futures.workspace = true
bytes.workspace = true
tokio-util.workspace = true
tokio-stream.workspace = true
async-trait.workspace = true
dashmap.workspace = true
crossbeam-queue.workspace = true
crossbeam.workspace = true
serde.workspace = true
scopeguard.workspace = true
rustix.workspace = true
sonyflake.workspace = true

kiseki-common = {path = "../../components/common"}
kiseki-utils = {path = "../../components/utils"}
kiseki-types = {path = "../../components/types"}
kiseki-meta = {path = "../../components/meta"}

rand = "0.8.5"
log = "0.4.20"
byte-pool = "0.2.4"
fmmap = {version = "0.3.3", features = ["tokio","tokio-async"]}
crc32fast = "1.3.2"
moka = { version = "0.12.5", features = ["future"] }

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true

kiseki-utils = {path = "../../components/utils"}

uuid = "1.7.0"

[[bench]]
name = "bench_main"
harness = false
path = "benches/bench_main.rs"
