[package]
name = "kiseki-storage"
version = "0.1.0"
edition = "2024"
description = "The core storage implementation"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes.workspace = true
crossbeam-queue.workspace = true
futures.workspace = true
opendal.workspace = true
snafu.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true

kiseki-common = { path = "../../components/common" }
kiseki-types = { path = "../../components/types" }
kiseki-utils = { path = "../../components/utils" }

fmmap = { version = "0.3.3", features = ["tokio", "tokio-async"] }
moka = { version = "0.12.10", features = ["future"] }

[dev-dependencies]
tempfile.workspace = true
tokio-stream.workspace = true

#[[bench]]
#name = "bench_main"
#harness = false
#path = "benches/bench_main.rs"
