[package]
name = "kiseki-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuser.workspace = true
tracing.workspace = true
opendal.workspace = true
byteorder.workspace = true
serde.workspace = true
bincode.workspace = true
lazy_static.workspace = true
snafu.workspace = true
rangemap.workspace = true
sonyflake.workspace = true
tokio-util.workspace = true

kiseki-common = {path = "../../components/common"}
kiseki-utils = {path = "../../components/utils"}

