[package]
name = "kiseki-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode.workspace = true
bitflags.workspace = true
byteorder.workspace = true
fuser.workspace = true
lazy_static.workspace = true
libc.workspace = true
opendal.workspace = true
rangemap.workspace = true
serde.workspace = true
snafu.workspace = true
sonyflake.workspace = true
tokio-util.workspace = true
tracing.workspace = true

kiseki-common = { path = "../../components/common" }
kiseki-utils = { path = "../../components/utils" }
