[package]
name = "kiseki-vfs"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kiseki-common = { path = "../../components/common" }
kiseki-meta = { path = "../../components/meta", features = ["meta-rocksdb"] }
kiseki-storage = { path = "../../components/storage" }
kiseki-types = { path = "../../components/types" }
kiseki-utils = { path = "../../components/utils" }

bincode.workspace = true
bytes.workspace = true
crossbeam.workspace = true
crossbeam-queue.workspace = true
dashmap.workspace = true
fuser.workspace = true
futures.workspace = true
libc.workspace = true
opendal.workspace = true
rangemap.workspace = true
scopeguard.workspace = true
serde.workspace = true
snafu.workspace = true
sonyflake.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
rstest.workspace = true
proptest.workspace = true
tokio-test.workspace = true
serial_test.workspace = true
